Implement F012 cloud production environment
